# K-QGMIP

./: README.md
KGeoMIP/: Dataset_Description.md  README.md
KGeoMIP/data/: generar_tpm.py
KGeoMIP/data/samples/: N10A_cols.npy
KGeoMIP/src/Method2_Dynamic_Programming_Reformulation/src/: main.py
KQNodes/: pyproject.toml
KQNodes/data/: generar_tpm.py
KQNodes/review/profiling/NET3A/15_06_2026/00hrs/: _voraz_k.html  algorithm.html
KQNodes/review/profiling/NET3A/15_06_2026/15hrs/: _voraz_k.html
KQNodes/review/profiling/NET4A/14_06_2026/22hrs/: _voraz_k.html
KQNodes/review/profiling/NET4A/15_06_2026/00hrs/: _voraz_k.html  algorithm.html
KQNodes/review/profiling/NET4A/15_06_2026/01hrs/: _voraz_k.html
KQNodes/review/profiling/NET4A/15_06_2026/13hrs/: _voraz_k.html
KQNodes/review/profiling/NET4A/15_06_2026/15hrs/: _voraz_k.html
KQNodes/review/profiling/NET5A/15_06_2026/00hrs/: _voraz_k.html  algorithm.html
KQNodes/review/profiling/NET5A/15_06_2026/01hrs/: _voraz_k.html
KQNodes/review/profiling/NET5A/15_06_2026/13hrs/: _voraz_k.html
KQNodes/review/profiling/NET5A/15_06_2026/15hrs/: _voraz_k.html
KQNodes/review/profiling/NET6A/15_06_2026/00hrs/: _voraz_k.html  algorithm.html
KQNodes/review/profiling/NET6A/15_06_2026/15hrs/: _voraz_k.html
KQNodes/src/constants/: models.py
KQNodes/src/funcs/: format.py  tpm_store.py
KQNodes/src/strategies/: kq_nodes.py  kq_nodes_stream.py
docs/manual_tecnico/: Manual_Tecnico_K-QGMIP.docx
docs_entregables/: DatosPruebas2026 entregable.xlsx  Manual_Tecnico_KQGMIP.docx  Manual_Usuario_KQGMIP.docx
(+10 files in other folders)
