[project]
name = "proyecto-2025a"
version = "0.1.0"
description = "Framework for the Minimal Information Partition problem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pyinstrument==5.1.2",
    "pandas==2.3.3",
    "openpyxl==3.1.3",
    "pyttsx3==2.98",
    "colorama==0.4.5",
]

# Opcional: solo para la estrategia de comparacion con PyPhi (src/strategies/phi.py)
# y emd_causal (src/funcs/iit.py). KQNodes NO los necesita; pyphi arrastra pyemd
# (extension en C) que no compila sin Build Tools. Instalar con: uv sync --extra phi
[project.optional-dependencies]
phi = [
    "scipy==1.17.0",
    "pyphi==1.2.0",
]